import uuid
from django.db import models
from django.contrib.auth.models import (
    AbstractBaseUser,
    PermissionsMixin,
    BaseUserManager,
)


class SessionStatus(models.TextChoices):
    QUEUED = "queued", "Queued"
    ANALYZING = "analyzing", "Analyzing"
    COMPLETE = "complete", "Complete"
    FAILED = "failed", "Failed"


class AnalysisStatus(models.TextChoices):
    PENDING = "pending", "Pending"
    PROCESSING = "processing", "Processing"
    COMPLETE = "complete", "Complete"
    FAILED = "failed", "Failed"


class LLMAnalysisStatus(models.TextChoices):
    QUEUED = "queued", "Queued"
    PROCESSING = "processing", "Processing"
    COMPLETE = "complete", "Complete"
    FAILED = "failed", "Failed"


class AppUserManager(BaseUserManager):
    def create_user(self, email=None, password=None, **extra_fields):
        email = self.normalize_email(email) if email else None
        user = self.model(email=email, **extra_fields)
        user.set_password(password)
        user.save(using=self._db)
        return user

    def create_superuser(self, email=None, password=None, **extra_fields):
        extra_fields.setdefault("is_staff", True)
        extra_fields.setdefault("is_superuser", True)
        extra_fields.setdefault("is_active", True)
        return self.create_user(email, password, **extra_fields)


class AppUser(AbstractBaseUser, PermissionsMixin):
    id = models.UUIDField(primary_key=True, default=uuid.uuid4, editable=False)
    email = models.EmailField(unique=True, null=True, blank=True)
    created_at = models.DateTimeField(auto_now_add=True)
    is_staff = models.BooleanField(default=False)
    is_active = models.BooleanField(default=True)

    USERNAME_FIELD = "email"
    REQUIRED_FIELDS = []

    objects = AppUserManager()

    class Meta:
        db_table = "app_user"


class BrowseSession(models.Model):
    # auto generated UUID
    id = models.UUIDField(primary_key=True, default=uuid.uuid4, editable=False)
    # FK to app_user
    user = models.ForeignKey(AppUser, on_delete=models.CASCADE)
    # twitter / x.com etc — from X-Zeeschuimer-Platform header
    platform = models.TextField()
    # browser metadata
    user_agent = models.TextField(null=True)
    # tracks overall session lifecycle
    status = models.TextField(
        default=SessionStatus.QUEUED,
        choices=SessionStatus.choices,
    )
    created_at = models.DateTimeField(auto_now_add=True)
    updated_at = models.DateTimeField(auto_now=True)

    class Meta:
        db_table = "browse_session"
        indexes = [models.Index(fields=["user"])]


class TwitterAuthor(models.Model):
    # data.core.user_results.result.rest_id
    author_twitter_id = models.TextField(primary_key=True)
    # data.core.user_results.result.core.screen_name
    screen_name = models.CharField(max_length=50, null=True)
    # data.core.user_results.result.core.name
    display_name = models.CharField(max_length=100, null=True)
    # data.core.user_results.result.legacy.description
    bio = models.TextField(null=True)
    # data.core.user_results.result.location.location
    location = models.TextField(null=True)
    # data.core.user_results.result.legacy.followers_count
    followers_count = models.IntegerField(null=True)
    # data.core.user_results.result.legacy.friends_count
    following_count = models.IntegerField(null=True)
    # data.core.user_results.result.legacy.statuses_count
    statuses_count = models.IntegerField(null=True)
    # data.core.user_results.result.is_blue_verified
    is_blue_verified = models.BooleanField(null=True)
    # data.core.user_results.result.core.created_at
    account_created_at = models.DateTimeField(null=True)
    # when this row was inserted into our database — set automatically by Django
    created_at = models.DateTimeField(auto_now_add=True)
    # when this row was last updated — set automatically by Django on every save
    updated_at = models.DateTimeField(auto_now=True)

    class Meta:
        db_table = "twitter_author"
        indexes = [models.Index(fields=["screen_name"])]


class Tweet(models.Model):
    # data.legacy.id_str
    tweet_id = models.TextField(primary_key=True)
    # FK to twitter_author
    author = models.ForeignKey(
        TwitterAuthor,
        on_delete=models.SET_NULL,
        null=True,
    )
    # data.legacy.conversation_id_str
    conversation_id = models.TextField(null=True)
    # derived: true if in_reply_to_status_id_str exists
    is_reply = models.BooleanField(default=False)
    # data.legacy.in_reply_to_status_id_str
    in_reply_to_tweet_id = models.TextField(null=True)
    # data.legacy.in_reply_to_screen_name
    in_reply_to_screen_name = models.TextField(null=True)
    # outer envelope
    timestamp_collected = models.BigIntegerField(null=True)
    # data.legacy.full_text
    full_text = models.TextField(null=True)
    # data.legacy.entities.hashtags[].text
    hashtags = models.JSONField(null=True)
    # data.legacy.lang
    lang = models.CharField(max_length=10, null=True)
    # data.source (HTML tag stripped)
    source_app = models.TextField(null=True)
    # outer envelope source_platform_url
    source_platform_url = models.TextField(null=True)
    # data.legacy.is_quote_status
    is_quote_status = models.BooleanField(default=False)
    # derived from data structure
    is_retweet = models.BooleanField(default=False)
    # data.legacy.possibly_sensitive
    possibly_sensitive = models.BooleanField(default=False)
    # data.promoted
    promoted = models.BooleanField(default=False)
    # data.legacy.created_at
    tweet_created_at = models.DateTimeField(null=True)
    # tracks analysis pipeline progress
    analysis_status = models.TextField(
        default=AnalysisStatus.PENDING,
        choices=AnalysisStatus.choices,
    )
    created_at = models.DateTimeField(auto_now_add=True)
    updated_at = models.DateTimeField(auto_now=True)

    class Meta:
        db_table = "tweet"
        indexes = [
            models.Index(fields=["author"]),
            models.Index(fields=["conversation_id"]),
            models.Index(fields=["tweet_created_at"]),
            models.Index(fields=["analysis_status"]),
        ]


class TweetMedia(models.Model):
    # auto generated UUID
    id = models.UUIDField(primary_key=True, default=uuid.uuid4, editable=False)
    # FK to tweet
    tweet = models.ForeignKey(Tweet, on_delete=models.CASCADE, db_column="tweet_id")
    # e.g. "3_xxx" photo, "7_xxx" video
    media_key = models.TextField(unique=True)
    # photo / video / animated_gif
    type = models.TextField(null=True)
    # media_url_https
    media_url = models.TextField(null=True)
    width = models.IntegerField(null=True)
    height = models.IntegerField(null=True)
    # NULL for photos
    duration_ms = models.IntegerField(null=True)
    # NULL for photos
    video_variants = models.JSONField(null=True)
    created_at = models.DateTimeField(auto_now_add=True)

    class Meta:
        db_table = "tweet_media"
        indexes = [models.Index(fields=["tweet"])]


class ViewedTweet(models.Model):
    # auto generated UUID
    id = models.UUIDField(primary_key=True, default=uuid.uuid4, editable=False)
    # FK to app_user
    user = models.ForeignKey(AppUser, on_delete=models.CASCADE)
    # FK to browse_session
    session = models.ForeignKey(BrowseSession, on_delete=models.CASCADE)
    # FK to tweet
    tweet = models.ForeignKey(Tweet, on_delete=models.CASCADE)
    # outer envelope
    timestamp_collected = models.BigIntegerField(null=True)
    # engagement stats at moment of viewing
    favorite_count = models.IntegerField(null=True)  # data.legacy.favorite_count
    retweet_count = models.IntegerField(null=True)  # data.legacy.retweet_count
    reply_count = models.IntegerField(null=True)  # data.legacy.reply_count
    quote_count = models.IntegerField(null=True)  # data.legacy.quote_count
    bookmark_count = models.IntegerField(null=True)  # data.legacy.bookmark_count
    view_count = models.BigIntegerField(null=True)  # data.views.count
    # entire ndjson record stored as backup
    raw_data = models.JSONField(null=True)
    created_at = models.DateTimeField(auto_now_add=True)

    class Meta:
        db_table = "viewed_tweet"
        indexes = [
            models.Index(fields=["user"]),
            models.Index(fields=["session"]),
            models.Index(fields=["tweet"]),
        ]


class SentimentResult(models.Model):
    tweet = models.OneToOneField(Tweet, on_delete=models.CASCADE)
    # positive / negative / neutral
    sentiment = models.TextField()
    confidence = models.FloatField(null=True)
    created_at = models.DateTimeField(auto_now_add=True)
    updated_at = models.DateTimeField(auto_now=True)

    class Meta:
        db_table = "sentiment_result"


class TopicResult(models.Model):
    tweet = models.OneToOneField(Tweet, on_delete=models.CASCADE)
    # politics, sports, entertainment etc
    topic = models.TextField()
    confidence = models.FloatField(null=True)
    created_at = models.DateTimeField(auto_now_add=True)
    updated_at = models.DateTimeField(auto_now=True)

    class Meta:
        db_table = "topic_result"


class ToxicityResult(models.Model):
    tweet = models.OneToOneField(Tweet, on_delete=models.CASCADE)
    # toxic / non-toxic / hate etc
    toxicity_label = models.TextField()
    confidence = models.FloatField(null=True)
    created_at = models.DateTimeField(auto_now_add=True)
    updated_at = models.DateTimeField(auto_now=True)

    class Meta:
        db_table = "toxicity_result"


class LLMAnalysisRun(models.Model):
    id = models.UUIDField(primary_key=True, default=uuid.uuid4, editable=False)
    user = models.ForeignKey(AppUser, on_delete=models.CASCADE)
    status = models.TextField(
        default=LLMAnalysisStatus.QUEUED,
        choices=LLMAnalysisStatus.choices,
    )
    sample_size = models.IntegerField()
    sample_seed = models.BigIntegerField(null=True)
    model_name = models.TextField()
    sample_metadata = models.JSONField(null=True)
    result = models.JSONField(null=True)
    raw_output = models.TextField(null=True)
    error_message = models.TextField(null=True)
    created_at = models.DateTimeField(auto_now_add=True)
    updated_at = models.DateTimeField(auto_now=True)

    class Meta:
        db_table = "llm_analysis_run"
        indexes = [
            models.Index(fields=["user"], name="llm_run_user_idx"),
            models.Index(fields=["status"], name="llm_run_status_idx"),
            models.Index(fields=["created_at"], name="llm_run_created_idx"),
        ]
