// ==========================
// 1. APP USER
// ==========================
Table app_user {
  id         uuid [pk, note: "generated by browser plugin on first install or by login/auth"]
  created_at timestamptz [not null, default: `now()`]
}

// ==========================
// 2. BROWSE SESSION
// ==========================
Table browse_session {
  id         uuid [pk, default: `gen_random_uuid()`]
  user_id    uuid [not null, ref: > app_user.id]
  platform   text [not null, note: "twitter / x.com etc"]
  status text [not null, default: 'ingesting'] // ingesting → queued → analyzing → complete → failed

  user_agent text
  started_at timestamptz [not null, default: `now()`]
  ended_at   timestamptz

  indexes {
    user_id
  }
}

// ==========================
// 3. TWITTER AUTHOR
// ==========================
Table twitter_author {
  twitter_id          bigint [pk]

  screen_name         varchar(50)
  display_name        varchar(100)
  bio                 text
  location            text

  followers_count     int
  following_count     int
  statuses_count      int

  is_blue_verified    boolean

  account_created_at  timestamptz
  last_updated_at     timestamptz
}

// ==========================
// 4. TWEET (GLOBAL)
// ==========================
Table tweet {
  twitter_id           bigint [pk]

  author_twitter_id    bigint [not null, ref: > twitter_author.twitter_id]
  analysis_status text [not null, default: 'pending'] // pending → processing → complete → failed
  conversation_id      bigint
  is_reply             boolean
  in_reply_to_tweet_id bigint
  in_reply_to_screen_name text

  timestamp_collected  bigint

  full_text            text
  hashtags             jsonb
  lang                 varchar(10)
  source_app           text
  source_platform_url  text

  is_quote_status      boolean
  is_retweet           boolean
  possibly_sensitive   boolean
  promoted             boolean

  tweet_created_at     timestamptz

  indexes {
    author_twitter_id
    conversation_id
    tweet_created_at
  }
}

// ==========================
// 5. TWEET MEDIA
// ==========================
Table tweet_media {
  id               uuid [pk, default: `gen_random_uuid()`]

  tweet_id         bigint [not null, ref: > tweet.twitter_id]

  media_key        text [not null, unique]
  type             text
  media_url        text

  width            int
  height           int
  duration_ms      int

  video_variants   jsonb

  created_at       timestamptz [default: `now()`]

  indexes {
    tweet_id
  }
}

// ==========================
// 6. VIEWED TWEET (USER × SESSION × TWEET)
// ==========================
Table viewed_tweet {
  id                uuid [pk, default: `gen_random_uuid()`]

  user_id           uuid [not null, ref: > app_user.id]
  session_id        uuid [not null, ref: > browse_session.id]
  tweet_id          bigint [not null, ref: > tweet.twitter_id]

  timestamp_collected bigint

  favorite_count    int
  retweet_count     int
  reply_count       int
  quote_count       int
  bookmark_count    int
  view_count        bigint

  raw_data          jsonb

  indexes {
    user_id
    session_id
    tweet_id
  }
}

// ==========================
// 7. SENTIMENT RESULT
// ==========================
Table sentiment_result {
  id               uuid [pk, default: `gen_random_uuid()`]
  tweet_id         bigint [not null, ref: > tweet.twitter_id]

  sentiment        text [not null]  // positive / negative / neutral
  confidence       float

  analyzed_at      timestamptz [default: `now()`]
}

// ==========================
// 8. TOPIC RESULT
// ==========================
Table topic_result {
  id               uuid [pk, default: `gen_random_uuid()`]
  tweet_id         bigint [not null, ref: > tweet.twitter_id]

  topic            text [not null] // politics, sports, etc
  confidence       float

  analyzed_at      timestamptz [default: `now()`]
}

// ==========================
// 9. POLITICAL LEANING RESULT
// ==========================
Table political_leaning_result {
  id               uuid [pk, default: `gen_random_uuid()`]
  tweet_id         bigint [not null, ref: > tweet.twitter_id]

  leaning          text [not null] // left, right, centrist, unclear
  confidence       float

  analyzed_at      timestamptz [default: `now()`]
}

// ==========================
// 10. TOXICITY RESULT
// ==========================
Table toxicity_result {
  id               uuid [pk, default: `gen_random_uuid()`]
  tweet_id         bigint [not null, ref: > tweet.twitter_id]

  toxicity_label   text [not null] // toxic / non-toxic / hate / etc
  confidence       float

  analyzed_at      timestamptz [default: `now()`]
}